# poc-tauri-spring

./: .gitignore  MACOS_PACKAGING.md  NATIVE_IMAGE.md  NATIVE_PROCESS_MANAGEMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_COMPLETE.md  build.sh  build_macos.sh  build_native.sh  dev.sh  dev_native.sh  manage_native.sh  package.sh  verify.sh
.claude/: settings.local.json
backend/: pom.xml
backend/src/main/java/com/example/backend/: Application.java
backend/src/main/java/com/example/backend/config/: CorsConfig.java
backend/src/main/java/com/example/backend/controller/: ApiController.java
backend/src/main/resources/: application.yml
src/: app.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.png.txt
src-tauri/src/: lib.rs  main.rs
